2009-06-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m
	(-initializeQuickTablesAclsInContext:): new method that
	initializes the new "userCanAccessAllObjects" ivar.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-initWithName:inContainer:): added new
	"userCanAccessObjectsClassifiedAs" ivar (array of bools) to
	quickly determine whether a user can access a component
	informations.
	(-initializeQuickTablesAclsInContext:): new method that
	initializes the new ivar above. 
	(-davCalendarQuery:, -davCalendarMultiget:): invoke the new method
	above.

	* Main/NSException+Stacktrace.m, SOPE/NGCards/NGCardsSaxHandler.m,
	SOPE/NGCards/NSString+NGCards.m,
	SOPE/NGCards/versitCardsSaxDriver/VSSaxDriver.m,
	SoObjects/Appointments/SOGoAppointmentFolder.m,
	SoObjects/SOGo/NSArray+Utilities.m,
	SoObjects/SOGo/SOGoGCSFolder.m,
	SoObjects/SOGo/SOGoLDAPUserDefaults.m,
	UI/MailPartViewers/UIxMailPartTextViewer.m,
	UI/MainUI/SOGoUserHomePage.m, UI/Scheduler/UIxCalListingActions.m:
	replaced all invocations of "malloc", "realloc", "free" by similar
	invocations to NSZoneMalloc, NSZoneRealloc and NSZoneFree.

	* SoObjects/Appointments/SOGoAppointmentFolder.m (+initialize):
	removed obsolete security declarations.
	(-davCalendarQuery, -davCalendarMultiget): delegate conversion of
	"properties" NSArray to C array to submethods. Those submethods
	now pass a count parameter to properly evaluate the amount of
	responses instead of the static 100 value. Make use of
	NSZoneMalloc instead of malloc.

	* Tools/sogo-contacts-removedoubles.m: added code to avoid
	removing cards referenced in vlists.

2009-06-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -postCalDAVEventRequestTo:from:]): remove
	alarms from invitation and set organizer of master event when
	dealing with a recurrent event.

2009-06-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
